src/sass/pages/_home.scss
/**
 * @page Home Page
 */


/* Hero
/* -------------------------------------------------------------------------- */
.hero {
  position: relative;
  min-height: 80vh;
  background-image: url('../img/hero-bg.jpg');
  background-size: cover;
  overflow: hidden;
  padding: 120px $spacing-4 $spacing-6;
  
  @include on-desktop {
    padding: 0;
    height: 100vh;
  }
}

.hero-pattern {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.hero-pattern__image {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-image: url('../img/hero-pattern.png');
  background-size: cover;
  mix-blend-mode: screen;
  animation: 12s linear hero-pattern-hue-rotate infinite;
}

@keyframes hero-pattern-hue-rotate {
  0%   { filter: hue-rotate(0deg); }
  25% { filter: hue-rotate(0deg); }
  50% { filter: hue-rotate(-180deg); }
  100% { filter: hue-rotate(0deg); }
}

.hero-masthead {
  text-align: center;
  color: white;
  margin: $spacing-6 auto;

  @include on-desktop {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin: 0;
  }
}

.hero-masthead__logo {
  margin-top: 0;
  margin-bottom: $spacing-6;
  @include on-desktop {
    margin-bottom: $spacing-8;
  }
}

.hero-masthead__logo img {
  display: block;
  width: 240px;
  max-width: 320px;
  margin: 0 auto;
  
  @include on-desktop {
    max-width: none;
    width: 450px;
  }
}

.hero-masthead__dateline {
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 1px;
  line-height: 2;
  font-size: 14px;
  @include on-desktop {
    letter-spacing: 2px;
    font-size: 16px;
  }
}

.hero-footer {
  @include on-desktop {
    position: absolute;
    left: $spacing-6;
    right: $spacing-6;
    bottom: $spacing-6;
  }
}

.hero-footer__chevron {
  @include m-button-unstyled;
  margin: 0 auto;
  display: block;
  margin: 0 auto;
  animation: 1s cubic-bezier(0.455, 0.03, 0.515, 0.955) chevron-bob infinite;

  &:focus {
    outline: 2px solid rgba($color-primary, 0.2);
  }
}

.hero-footer__chevron .icon {
  width: 14px;
  height: 14px;
}

@keyframes chevron-bob {
  0% { transform: translateY(12px); }
  50% { transform: translateY(0); }
  100% { transform: translateY(12px); }
}

/* About DE
/* -------------------------------------------------------------------------- */
.about-de {
  padding-top: 160px;
  color: rgba(white, 0.7);
  overflow: hidden;
  @include on-desktop {
    padding-top: 240px;
  }
}

.about-de-pattern {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(-20%, -30%);
  width: 460px;
  z-index: 1;
}

.about-de-body {
  position: relative;
  z-index: 2;
}

.about-de-body__pullout {
  font-size: $font-size-3;
  font-weight: bold;
  color: white;
}

.about-de-areas {
  @include m-list-unstyled;
}

.about-de-areas__item {
  display: flex;
  align-items: center;
  margin-bottom: $spacing-4;
}

.about-de-areas__icon {
  position: relative;
  width: 48px;
  height: 48px;
  border: 2px solid $color-primary;
  border-radius: 50%;
  margin-right: $spacing-5;
  flex-shrink: 0;
}

.about-de-areas__icon .icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 16px;
  height: 16px;
}

.about-de-areas__title {
  font-weight: bold;
  color: white;
}

/* Article Listings
/* -------------------------------------------------------------------------- */
.article-section {
  overflow: hidden;
  padding-top: 0;
  background-color: white;
  @include on-desktop {
    padding-top: inherit;
  }
}

.article-item-list {
  position: relative;
  margin-left: -$spacing-4;
  margin-right: -$spacing-4;
  width: 95%;
  @include on-desktop {
    // width: 100%;
  }
}

.article-item {
  padding: $spacing-4;
}

.article-item__image {
  margin-bottom: $spacing-4;
}

.article-item__image img {
  display: block;
  max-width: 100%;
}

.article-item__details {
  color: $color-text-l1;
}

.article-item__details time {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 14px;
  display: block;
  margin-bottom: $spacing-2;
  font-weight: bold;
}

.article-item__details p {
}

// Controls
.article-item-control {
  @include m-button-unstyled;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: white;
  width: 48px;
  height: 48px;
  font-size: 0;
  z-index: 10;
  transition: 0.3s linear all;
  box-shadow: 0 2px 4px rgba(black, 0.2);
  display: none;

  @include on-desktop {
    display: block;
  }
}

.article-item-control {
  &.is-next {
    right: calc(-48px + #{$spacing-6 * -1});
    @include on-desktop {
      right: $spacing-4;
    }
  }
  &.is-prev {
    left: calc(-48px + #{$spacing-6 * -1});
  }
  &:focus {
    outline: 2px solid rgba($color-text, 0.3);
  }
}

.article-item-control .icon {
  fill: $color-text;
}

.article-item-control.slick-disabled {
  opacity: 0;
  visibility: hidden;
}

// Slick Overrides
.article-item-list .slick-list {
  overflow: visible !important;
}

.article-item-list .slick-slide {
  opacity: 0.3;
  transition: 0.3s linear opacity;
}

.article-item-list .slick-active {
  opacity: 1;
}


/* Agenda Section
/* -------------------------------------------------------------------------- */
.agenda-section {
  padding-bottom: 0;
  position: relative;
  z-index: 1;
}

.agenda-container {
  background-color: #ebebeb;
  padding: $spacing-5;
  @include on-desktop {
    padding: $spacing-8;
  }
}

.agenda-item-list {
  @include m-list-unstyled;
  margin: 0 #{-$spacing-2} $spacing-4;
}

.agenda-item-list > li {
  padding: 0 $spacing-2;
}

.agenda-item {
  @include m-button-unstyled;
  text-align: left;
  background-color: white;
  margin-bottom: $spacing-4;
  padding: $spacing-4;
  display: flex;
  align-items: center;

  &:focus { outline: 3px solid $color-border-l2; }
}

.agenda-item__header {

}

.agenda-item__type {
  color: rgb(180, 180, 180);
  text-transform: uppercase;
  font-weight: bold;
  font-size: 12px;
  display: block;
  letter-spacing: 1px;
  margin-bottom: $spacing-1;
}

.agenda-item__title {
  color: $color-text;
  font-weight: bold;
  margin-bottom: 0;
}

.agenda-item__icon {
  flex-shrink: 0;
  position: relative;
  display: none;

  @include on-desktop {
    display: block;
  }
}

.agenda-item__icon .icon {
  fill: rgb(220, 220, 220);
  width: 48px;
  height: 48px;
}

// Agenda Modals
.agenda-modal {}

.agenda-modal__type {
  text-transform: uppercase;
  font-size: $font-size-1;
  color: rgba(white, 0.8);
  font-weight: bold;
}

.agenda-modal h1 {
  font-size: $font-size-2;
  font-weight: bold;
  @include on-tablet {
    font-size: $font-size-3;
  }
}

.agenda-modal .modal-body {
  font-size: $font-size-1;
}


/* Speakers Section
/* -------------------------------------------------------------------------- */
.speakers-section {
  background-color: white;
  margin-top: -120px;
  padding-top: 240px;
}

.speakers-disclaimer {
  border: 1px solid yellow;
  padding: $spacing-4;
  font-size: $font-size-1;
  margin-bottom: $spacing-6;
  background-color: lighten(yellow, 40%);
}

.speakers-item-list {
  @include m-list-unstyled;
}

.speakers-item {
  @include m-button-unstyled;
  text-align: left;
  margin-bottom: $spacing-4;
  transition: 0.4s cubic-bezier(0.215, 0.610, 0.355, 1) all;
  cursor: pointer;

  &:focus { outline: none; }
}

.speakers-item-list.is-hovering .speakers-item:not(.is-active) {
  opacity: 0.4;
}

.speakers-item__profile {
  width: 100%;
  position: relative;
  margin-bottom: $spacing-4;
}
.speakers-item__profile img {
  max-width: 100%;
}

.speakers-item__logo {
  position: absolute;
  bottom: -10px;
  right: -10px;
  width: 48px;
  height: 48px;
  
  @include on-desktop {
    width: 60px;
    height: 60px;
  }
}

.speakers-item__details {
  font-size: $font-size-1;
  color: $color-text-l2;
  letter-spacing: -0.5px;
  line-height: 1.5;
}

.speakers-item:focus .speakers-item__details {
  color: $color-text;
}

.speakers-item__details small {
  font-size: 12px;
  @include on-tablet {
    font-size: $font-size-1;
  }
}

.speakers-modal {
  font-size: $font-size-1;
}

.speakers-modal header {
  font-size: $font-size-2;
}

.speakers-modal h1 {
  font-size: $font-size-3;
  font-weight: bold;
  margin-bottom: 0;
  margin-top: 0;
}


/* Sponsors Section
/* -------------------------------------------------------------------------- */
.sponsors-section {
  background-color: rgb(235, 235, 235);
  text-align: center;

  @include on-desktop {
    text-align: left;
  }
}

.sponsors-section .section-title {
  color: $color-text-l3;
}

.sponsor-item-list {
  @include m-list-unstyled;
  display: flex;
  flex-wrap: wrap;
  margin: 0 #{-$spacing-2};
  justify-content: center;

  @include on-desktop {
    justify-content: flex-start;
  }
}

.sponsor-item-list:after {
  // content: '';
  // display: block;
  // height: 1px;
  // width: 100%;
  // background-color: $color-border-l2;
  // margin: 0 $spacing-2 $spacing-6;
}

.sponsors-section > .container:last-of-type .sponsor-item-list:after {
  content: none;
}

.sponsor-item-list li {
  padding: 0 $spacing-2;
  margin-bottom: $spacing-6;
}

.sponsor-item {
  text-decoration: none;
  color: $color-text-l3;
  font-size: $font-size-1;
  &:hover {
    text-decoration: none;
    color: $color-text-l2;
  }
}

.sponsor-item__logo {
  width: 120px;
  height: 120px;
  background-color: white;
  position: relative;
  padding: $spacing-4;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto $spacing-2;

  @include on-desktop {
    width: 180px;
    height: 180px;
  }
}

.sponsor-item__logo img {
  display: block;
  max-width: 100%;
}

.sponsor-item__name {
  font-weight: bold;
  margin-bottom: 0;
  font-size: 14px;
  display: none;
}


/* Registration Form
/* -------------------------------------------------------------------------- */
.registration-form-section {
  margin-top: -120px;
  padding-bottom: 60px;

  @include on-desktop {
    padding-bottom: 120px;
  }
}

.registration-form-panel {
  background-color: rgb(7, 20, 33);
  background-image: url('../img/pattern-03.png');
  background-position: top left;
  background-size: 550px;
  background-repeat: no-repeat;
  box-shadow: 0 4px 8px rgba(black, 0.4);
  padding: $spacing-6;
  color: white;
  
  @include on-desktop {
    padding: $spacing-8;
  }
}

.registration-form-panel .section-title {
  margin-bottom: $spacing-6;
  text-align: center;

  @include on-desktop {
    color: white;
    font-size: $font-size-3;
    margin-bottom: $spacing-8;
    text-align: left;
  }
}

.registration-instructions {
  position: relative;
}

.registration-instructions__pullout {
  line-height: 1.4;
  margin-bottom: $spacing-6;
  
  @include on-desktop {
    font-weight: bold;
    font-size: $font-size-3;
  }
}

.registration-steps {
  @include m-list-unstyled;
  counter-reset: item;
}

.registration-steps > li {
  position: relative;
  padding-left: calc(32px + #{$spacing-4});
  margin-bottom: $spacing-5;
  min-height: 48px;
  
  @include on-desktop {
    padding-left: calc(48px + #{$spacing-5});
  }

  &:before {
    content: counter(item);
    counter-increment: item;
    display: block;
    position: absolute;
    top: 3px;
    left: 0;
    width: 32px;
    height: 32px;
    border: 2px solid $color-primary;
    border-radius: 50%;
    text-align: center;
    line-height: 32px;
    font-size: 14px;
    
    @include on-desktop {
      top: 6px;
      font-size: 16px;
      width: 48px;
      height: 48px;
      line-height: 46px;
    }
  }
}

.registration-steps__label {
  text-transform: uppercase;
  font-size: 14px;
  font-weight: bold;
  color: $color-secondary-l3;
}

